# zetaPayne

./: README.md  pyproject.toml
zetapayne/: common_functions.py  sobol_seq.py
zetapayne/step1_CreateGrid/: CustomPool.py  Grid.py  RandomGrid.py  assemble_grid.py  grid.conf  quasirandom_grid.py  random_grid.py  run_GSSP.py
zetapayne/step2_TrainNN/: NNTraining.py  RAdam.py  train_NN.py
zetapayne/step3_FitSpectra/: Fit.py  Network.py  SpectrumLoader.py  UncertFit.py  fitSpectrum.py  input.conf
